tests/pass/add.us
fn main() {
    10+10;
    "a"+"a";
}