tests/fail/invalid_escape.us


fn main() {
    "a\a";
}
// Expect : Invalid escape